# stellogen

./: .gitignore  .ocamlformat-ignore  BASICS.md  CLAUDE.md  EDITOR_SETUP.md  INCREMENTAL_PARSER.md  KERNEL.md  LANGUAGE_CONFIG.md  README.md  basics.md  dune-project  flake.nix  language-configuration.json  package.nix  stellogen.opam
src/: cosmog_compile.ml  cosmog_lexer.ml  cosmog_parser.mly  dune  expr.ml  expr_err.ml  lambda.ml  lexer.ml  lsc_ast.ml  lsc_err.ml  lsc_eval.ml  lsc_exec.ml  lsc_pretty.ml  lsc_trace.ml  parse_error.ml  parser.mly  parser_context.ml  sgen_ast.ml  sgen_err.ml  sgen_eval.ml  sgen_parsing.ml  terminal.ml  unification.ml  web_interface.ml
src/common/: common_parser.mly
src/core/: constellation.ml  constellation.mli  expression.ml  expression_error.ml  syntax.ml  unification.mli
src/eval/: constellation_eval.ml  evaluator.ml  evaluator.mli  executor.ml
src/lsc/: dune  lexer.mll  lsc_ast.ml  lsc_err.ml  lsc_lexer.ml  lsc_lexer.mll  lsc_parser.mly  parser.mly
src/output/: pretty.ml  terminal.ml  tracer.ml
src/parsing/: parse_error.ml  stellogen_parsing.ml
src/stellogen/: ast.ml  dune  lexer.mll  lsc_err.ml  parser.mly  sgen_ast.ml  sgen_err.ml  sgen_eval.ml  sgen_lexer.ml  sgen_lexer.mll  sgen_parser.mly  sgen_parsing.ml
src/web/: web_interface.ml
test/: README.md  check.t  dune  errors.t  examples.t  exercises.t  phases.t  subjects.t  syntax.t  test.ml  test.ml.old
test/behavior/: automata.sg  galaxy.sg  linear.sg  prolog.sg  records.sg
test/errors/: invalid_declaration.sg  invalid_string_char.sg  mismatched_bracket.sg  unclosed_paren.sg  (+4 more)
(+167 files in other folders)
