(library
 (name stellogen)
 (libraries base menhirLib)
 (preprocess
  (pps sedlex.ppx ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))

(menhir
 (modules parser)
 (flags --table --dump --explain))

(menhir
 (modules cosmog_parser)
 (flags --table --dump --explain))
