; Cram tests for Stellogen examples and syntax

(cram
 (deps
  (glob_files ./syntax/*.sg)
  (glob_files ./errors/*.sg)
  (glob_files ../examples/*.sg)
  (glob_files ../examples/lambda/*.sg)
  (glob_files ../examples/proofnets/*.sg)
  (glob_files ../examples/prolog/*.sg)
  (glob_files ../examples/states/*.sg)
  (glob_files ../examples/milkyway/*.sg)
  (glob_files ../exercises/solutions/*.sg)
  (package stellogen)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
