(library
 (name lsc)
 (libraries base common sedlex sedlex.ppx menhirLib)
 (preprocess
  (pps sedlex.ppx))
 (modules lsc_err lsc_ast unification lsc_parser lsc_lexer))

(env
 (dev
  (flags
   (:standard -warn-error -A))))

(menhir
 (modules ../common/common_parser lsc_parser)
 (merge_into lsc_parser)
 (flags --table --dump --explain))
